2004-11-1  David Inglis
	Use status handlers to prompt for launch input (process id and core file).

	* plugin.xml
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalAttachLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/CoreFilePrompter.java
	* src/org/eclipse/cdt/launch/internal/ui/ProcessPrompter.java
	
2004-11-01 David Inglis
	getEnvironmentAsProperty was not using new getEnviroment().
	
	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	
2004-10-22 David Inglis
	Added variables support to arguments, environment and working directory.

	* plugin.xml
	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalRunLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchMessages.properties
	* src/org/eclipse/cdt/launch/internal/ui/LocalRunLaunchConfigurationTabGroup.java
	* src/org/eclipse/cdt/launch/internal/ui/WorkingDirectoryBlock.java
	* src/org/eclipse/cdt/launch/ui/CArgumentsTab.java
	* src/org/eclipse/cdt/launch/ui/CDebuggerTab.java
	* src/org/eclipse/cdt/launch/internal/ui/MigratingCEnvironmentTab.java
	
2004-10-18 Alain Magloire
	Adjust to changes in CDI
	* src/org/eclipse/cdt/launch/internal/LocalRunLaunchDelegate.java

2004-10-18 David Inglis
	
	Update to new ICDIDebugger interface deprecating old
	Added seperate launch configuration for attaching to pid
	
	* lots of files changed

2004-10-17 Alain Magloire
	Remove deprecated method in CDI adjust the implementation.
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java

2004-10-08 Mikhail Khodjaiants
	Added the launch configuration preference for the register bookkeeping.
	* LaunchUIPluginResources.properties
	* CDebuggerTab.java

2004-08-23 Mikhail Khodjaiants
	Changes in the "Debugger" tab of the launch configuration dialog.